--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,10 @@ input[type="number"] {
     appearance: textfield;
 }
 
+h1 {
+    font-size: rem(50);
+}
+
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     display: none;
@@ -71,7 +75,7 @@ input {
     // border-radius: rem(30);
     border: none;
     // padding: rem(5) rem(5);
-    margin: rem(10) 0;
+    margin: rem(10) -10px;
     font-family: 'Source Code Pro', monospace;
     outline: none;
     height: rem(30);
@@ -90,8 +94,18 @@ input:focus {
     padding: rem(20) rem(10);
 }
 
-.number-minus {
-    height: rem(30);
+.number-minus,
+.number-plus {
+    height: rem(32);
     border: none;
     width: rem(30);
+    cursor: pointer;
+}
+
+.number-minus {
+    border-radius: 50% 0 0 50%;
+}
+
+.number-plus {
+    border-radius: 0 50% 50% 0;
 }
