--- a/css/style.scss
+++ b/css/style.scss
@@ -79,12 +79,12 @@ input {
     font-family: 'Source Code Pro', monospace;
     outline: none;
     height: rem(30);
-    width: 60%;
+
 }
 
 label {
     display: block;
-    width: 50vw;
+    // width: 50vw;
 }
 
 input:focus {
@@ -100,26 +100,28 @@ input:focus {
     padding: rem(20) rem(10);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
 
     .tile-dimensions {
 
         display: flex;
         flex-direction: column;
-        align-items: center;
+        // align-items: center;
 
         h3 {
             display: block;
             align-self: center;
         }
 
-        input {
-            width: 20%;
-        }
+        input {}
 
         div {
             display: flex;
             align-items: center;
+
+            label {
+                flex: 1 1 auto;
+            }
         }
     }
 }
