--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ input {
   font-family: 'Source Code Pro', monospace;
   outline: none;
   height: 1.875rem;
+  width: 100px;
 }
 
 label {
@@ -48,6 +49,14 @@ input:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tile-section div {
+  min-width: 300px;
+  max-width: 500px;
 }
 
 .tile-section .tile-dimensions {
@@ -77,16 +86,14 @@ input:focus {
 }
 
 .tile-section .tile-dimensions div label {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
+  border: 1px solid green;
 }
 
 .number-minus,
 .number-plus {
   height: 2rem;
   border: none;
-  width: 1.875rem;
+  width: 1.25rem;
   cursor: pointer;
 }
 
