--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 input {
   border: none;
-  margin: 0.625rem -10px;
+  margin: 0.625rem 0;
   font-family: 'Source Code Pro', monospace;
   outline: none;
+  padding: 2px 10px;
+  border-radius: 1.875rem;
   height: 1.875rem;
-  width: 100px;
+  width: 60%;
 }
 
 label {
@@ -59,24 +61,28 @@ input:focus {
   max-width: 500px;
 }
 
-.tile-section .tile-dimensions {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .tile-section .tile-dimensions h3 {
-  display: block;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  text-align: center;
 }
 
 .tile-section .tile-dimensions div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+}
+
+.tile-section .tile-dimensions div label {
+  border: 1px solid green;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,23 +91,12 @@ input:focus {
           align-items: center;
 }
 
-.tile-section .tile-dimensions div label {
-  border: 1px solid green;
-}
-
 .number-minus,
 .number-plus {
   height: 2rem;
   border: none;
-  width: 1.25rem;
+  width: 2rem;
   cursor: pointer;
-}
-
-.number-minus {
-  border-radius: 50% 0 0 50%;
-}
-
-.number-plus {
-  border-radius: 0 50% 50% 0;
+  border-radius: 50%;
 }
 /*# sourceMappingURL=style.css.map */
