--- a/css/style.scss
+++ b/css/style.scss
@@ -75,11 +75,13 @@ input {
     // border-radius: rem(30);
     border: none;
     // padding: rem(5) rem(5);
-    margin: rem(10) -10px;
+    margin: rem(10) 0;
     font-family: 'Source Code Pro', monospace;
     outline: none;
+    padding: 2px 10px;
+    border-radius: rem(30);
     height: rem(30);
-    width: 100px;
+    width: 60%;
 }
 
 label {
@@ -102,35 +104,37 @@ input:focus {
     flex-direction: column;
     align-items: center;
 
-
     // align-items: center;
     div {
-        // border: 1px solid black;
         min-width: 300px;
         max-width: 500px;
     }
 
     .tile-dimensions {
-
-        display: flex;
-        flex-direction: column;
+        // flex-wrap: wrap;
+        // display: flex;
+        // flex-direction: column;
         // align-items: center;
 
         h3 {
-            display: block;
-            align-self: center;
+            text-align: center;
         }
 
-        input {}
 
         div {
             display: flex;
-            align-items: center;
-
+            justify-content: center;
+            flex-direction: row;
+            // min-width: none;
+            // max-width: none;
+            flex-wrap: wrap;
+            gap: 10px;
 
             label {
                 // flex: 1 1 auto;
                 border: 1px solid green;
+                display: flex;
+                align-items: center;
             }
         }
     }
@@ -140,14 +144,15 @@ input:focus {
 .number-plus {
     height: rem(32);
     border: none;
-    width: rem(20);
+    width: rem(32);
     cursor: pointer;
+    border-radius: 50%;
 }
 
-.number-minus {
-    border-radius: 50% 0 0 50%;
-}
+// .number-minus {
+//     border-radius: 50% 0 0 50%;
+// }
 
-.number-plus {
-    border-radius: 0 50% 50% 0;
-}
+// .number-plus {
+//     border-radius: 0 50% 50% 0;
+// }
