--- a/css/style.css
+++ b/css/style.css
@@ -18,30 +18,59 @@ input[type="number"]::-webkit-inner-spin-button {
   display: none;
 }
 
-input {
+input[type="number"] {
   border: none;
   margin: 0.625rem 0;
   font-family: 'Source Code Pro', monospace;
   outline: none;
-  padding: 2px 10px;
-  border-radius: 1.875rem;
-  height: 1.875rem;
-  width: 60%;
-}
-
-label {
-  display: block;
+  padding: 0px 2.25rem;
+  border-radius: 2rem;
+  height: 2rem;
 }
 
 input:focus {
   border: none;
 }
 
+.input-block {
+  position: relative;
+}
+
+.input-block span {
+  position: absolute;
+  right: 2.25rem;
+  bottom: 1.25rem;
+  font-size: 0.8em;
+  color: gray;
+}
+
 .change-section {
   background-color: gray;
 }
 
-.tile-section {
+h3 {
+  text-align: center;
+}
+
+input[type="radio"]:checked {
+  background-color: #187767;
+  border: 1px solid #187767;
+}
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 50%;
+  width: 1.125rem;
+  height: 1.125rem;
+  border: 1px solid silver;
+  -webkit-transition: 0.2s all linear;
+  transition: 0.2s all linear;
+  cursor: pointer;
+}
+
+.tile {
   background-color: silver;
   padding: 1.25rem 0.625rem;
   display: -webkit-box;
@@ -54,49 +83,40 @@ input:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  opacity: 0;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
-.tile-section div {
-  min-width: 300px;
-  max-width: 500px;
-}
-
-.tile-section .tile-dimensions h3 {
-  text-align: center;
-}
-
-.tile-section .tile-dimensions div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 10px;
-}
-
-.tile-section .tile-dimensions div label {
-  border: 1px solid green;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.tile__dimensions {
+  margin-bottom: 1.25rem;
 }
 
 .number-minus,
 .number-plus {
-  height: 2rem;
+  height: 1.875rem;
   border: none;
-  width: 2rem;
+  width: 1.875rem;
   cursor: pointer;
   border-radius: 50%;
+  position: absolute;
+  top: 0.6875rem;
+  background-color: #187767;
+  color: white;
+}
+
+.number-minus {
+  left: 0.0625rem;
+}
+
+.number-plus {
+  right: 0.0625rem;
+}
+
+#one-tile-area {
+  position: absolute;
+  font-size: 0.8em;
+  text-align: center;
+  color: #636363;
 }
 /*# sourceMappingURL=style.css.map */
