--- a/css/style.scss
+++ b/css/style.scss
@@ -59,6 +59,9 @@ html {
     font-family: 'Source Code Pro', monospace;
     background-color: $back-color;
     color: white;
+    width: 100vw;
+    // height: 100vh;
+
 }
 
 input[type="number"] {
@@ -68,7 +71,7 @@ input[type="number"] {
 }
 
 h1 {
-    font-size: rem(50);
+    font-size: rem(40);
     color: $main-color;
     text-align: center;
 }
