--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600&display=swap");
-html {
+body {
   font-family: 'Source Code Pro', monospace;
   background-color: #3a3a3a;
   color: white;
   width: 100vw;
+  -webkit-animation: start 1s ease;
+          animation: start 1s ease;
 }
 
 input[type="number"] {
@@ -16,6 +18,7 @@ h1 {
   font-size: 2.5rem;
   color: #1a6872;
   text-align: center;
+  margin: 10px 0;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -139,7 +142,28 @@ input[type="radio"] {
 #one-tile-area {
   position: absolute;
   font-size: 0.8em;
-  text-align: center;
-  color: #1a6872;
+  color: #42909a;
+}
+
+@-webkit-keyframes start {
+  from {
+    opacity: 0;
+    margin-top: -100px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0px;
+  }
+}
+
+@keyframes start {
+  from {
+    opacity: 0;
+    margin-top: -100px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
