--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600&display=swap");
 body {
   font-family: 'Source Code Pro', monospace;
-  background-color: #3a3a3a;
+  background-color: #2b2b2b;
   color: white;
   width: 100vw;
   -webkit-animation: start 1s ease;
@@ -139,10 +139,10 @@ input[type="radio"] {
   right: 0.125rem;
 }
 
-#one-tile-area {
-  position: absolute;
+.subtext {
   font-size: 0.8em;
   color: #42909a;
+  text-align: center;
 }
 
 @-webkit-keyframes start {
