--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600&display=swap");
 body {
   font-family: 'Source Code Pro', monospace;
-  background-color: #5f1e1e;
+  background-color: #2b2b2b;
   color: white;
   width: 100vw;
   -webkit-animation: start 1s ease;
