--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600&display=swap");
 body {
   font-family: 'Source Code Pro', monospace;
-  background-color: #2b2b2b;
+  background-color: #313131;
   color: white;
   width: 100vw;
   -webkit-animation: start 1s ease;
@@ -16,7 +16,7 @@ input[type="number"] {
 
 h1 {
   font-size: 2.5rem;
-  color: #1a6872;
+  color: #447d85;
   text-align: center;
   margin: 10px 0;
 }
@@ -34,12 +34,12 @@ input[type="number"] {
   padding: 0px 2.25rem;
   border-radius: 2rem;
   height: 2rem;
-  border: 1px solid #1a6872;
+  border: 1px solid #447d85;
 }
 
 input:focus {
-  border: 1px solid #003640;
-  background-color: #e2ffff;
+  border: 1px solid #124b53;
+  background-color: white;
 }
 
 .input-block {
@@ -51,7 +51,7 @@ input:focus {
   right: 2.25rem;
   bottom: 1.25rem;
   font-size: 0.8em;
-  color: #1a6872;
+  color: #447d85;
 }
 
 h3 {
@@ -59,8 +59,8 @@ h3 {
 }
 
 input[type="radio"]:checked {
-  background-color: #1a6872;
-  border: 1px solid #1a6872;
+  background-color: #447d85;
+  border: 1px solid #447d85;
 }
 
 input[type="radio"] {
@@ -96,10 +96,6 @@ input[type="radio"] {
   transition: all 1s ease;
 }
 
-.tile__dimensions {
-  margin-bottom: 1.25rem;
-}
-
 .tile.active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -111,6 +107,10 @@ input[type="radio"] {
   transition: all 1s ease;
 }
 
+.padding {
+  padding-bottom: 0.875rem;
+}
+
 .number-minus,
 .number-plus {
   height: 1.875rem;
@@ -120,7 +120,7 @@ input[type="radio"] {
   border-radius: 50%;
   position: absolute;
   top: 0.75rem;
-  background-color: #1a6872;
+  background-color: #447d85;
   color: white;
   -webkit-transition: all .5s;
   transition: all .5s;
@@ -128,7 +128,7 @@ input[type="radio"] {
 
 .number-minus:hover,
 .number-plus:hover {
-  background-color: #003640;
+  background-color: #124b53;
 }
 
 .number-minus {
@@ -141,7 +141,7 @@ input[type="radio"] {
 
 .subtext {
   font-size: 0.8em;
-  color: #42909a;
+  color: #94cdd5;
   text-align: center;
 }
 
