--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1 {
   font-size: 2.5rem;
   color: #447d85;
   text-align: center;
-  margin: 10px 0;
+  margin: 1.875rem 0 0.625rem 0;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -148,22 +148,26 @@ input[type="radio"] {
 @-webkit-keyframes start {
   from {
     opacity: 0;
-    margin-top: -100px;
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
   }
   to {
     opacity: 1;
-    margin-top: 0px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
 @keyframes start {
   from {
     opacity: 0;
-    margin-top: -100px;
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
   }
   to {
     opacity: 1;
-    margin-top: 0px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 /*# sourceMappingURL=style.css.map */
