--- a/css/style.scss
+++ b/css/style.scss
@@ -73,7 +73,7 @@ h1 {
     font-size: rem(40);
     color: $main-color;
     text-align: center;
-    margin: 10px 0;
+    margin: rem(30) 0 rem(10) 0;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -193,11 +193,11 @@ input[type="radio"] {
 @keyframes start {
     from {
         opacity: 0;
-        margin-top: -100px;
+        transform: scale(.9);
     }
 
     to {
         opacity: 1;
-        margin-top: 0px;
+        transform: scale(1);
     }
 }
