--- a/css/style.scss
+++ b/css/style.scss
@@ -192,7 +192,7 @@ input[type="radio"] {
 
 @keyframes start {
     from {
-        opacity: 0;
+        opacity: .5;
         transform: scale(.9);
     }
 
