--- a/css/style.scss
+++ b/css/style.scss
@@ -106,7 +106,7 @@ input:focus {
         right: rem(36);
         bottom: rem(20);
         font-size: 0.8em;
-        color: $main-color;
+        color: $main-color - 50%;
     }
 }
 
