--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,6 @@ input[type="number"] {
   appearance: textfield;
 }
 
-h1 {
-  font-size: 2.5rem;
-  color: #61A2AE;
-  text-align: center;
-  margin: 1.875rem 0 0.625rem 0;
-}
-
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   display: none;
@@ -54,7 +47,7 @@ input:focus {
   color: #2f707c;
 }
 
-h3 {
+h2 {
   text-align: center;
 }
 
@@ -76,6 +69,21 @@ input[type="radio"] {
   cursor: pointer;
 }
 
+.title {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  z-index: 5;
+  padding: 20px 20px 0 20px;
+}
+
+.title h1 {
+  font-size: 2.5rem;
+  color: #61A2AE;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  text-align: center;
+}
+
 .tile {
   display: none;
   padding: 1.25rem 0.625rem;
@@ -94,6 +102,7 @@ input[type="radio"] {
   opacity: 0;
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
+  margin-bottom: 50px;
 }
 
 .tile.active {
@@ -168,6 +177,29 @@ input[type="radio"] {
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .nav__menu {
+    color: #fff;
+    background-color: #636363;
+    -webkit-box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.315);
+            box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.315);
+    position: fixed;
+    width: 100vw;
+    height: 50px;
+    bottom: 0;
+    z-index: 5;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 10px 10px 0 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
