--- a/css/style.scss
+++ b/css/style.scss
@@ -69,12 +69,6 @@ input[type="number"] {
     appearance: textfield;
 }
 
-h1 {
-    font-size: rem(40);
-    color: $main-color;
-    text-align: center;
-    margin: rem(30) 0 rem(10) 0;
-}
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -110,7 +104,7 @@ input:focus {
     }
 }
 
-h3 {
+h2 {
     text-align: center;
 }
 
@@ -133,18 +127,30 @@ input[type="radio"] {
     cursor: pointer;
 }
 
+.title {
+    transition: all .3s;
+    z-index: 5;
+    padding: 20px 20px 0 20px;
+
+    h1 {
+        font-size: rem(40);
+        color: $main-color;
+        transition: all .3s;
+        text-align: center;
+    }
+
+}
+
 .tile {
     display: none;
     padding: rem(20) rem(10);
     display: flex;
-
     transform: scale(0);
     flex-direction: column;
     align-items: center;
     opacity: 0;
     transition: all 1s ease;
-
-
+    margin-bottom: 50px;
 
     &.active {
         display: flex;
@@ -199,5 +205,22 @@ input[type="radio"] {
     to {
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+@media screen and (max-width:425px) {
+    .nav__menu {
+        color: #fff;
+        background-color: $back-color + 50%;
+        box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.315);
+        position: fixed;
+        width: 100vw;
+        height: 50px;
+        bottom: 0;
+        z-index: 5;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        border-radius: 10px 10px 0 0;
     }
 }
