--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ body {
     background-color: $back-color;
     color: white;
     width: 100vw;
-    animation: start 1s ease;
+    animation: start .5s ease;
 }
 
 input[type="number"] {
@@ -69,6 +69,11 @@ input[type="number"] {
     appearance: textfield;
 }
 
+button,
+button:active,
+button:focus {
+    outline: none;
+}
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -177,17 +182,21 @@ input[type="radio"] {
     color: white;
     transition: all .5s;
 
- //   &:hover {
-   //     background-color: $main-color - 100%;
- //   }
+    &:active {
+        background-color: $main-color - 100%;
+    }
 }
 
 
+
 @media(hover: hover) and (pointer: fine) {
+
     .number-minus:hover,
-.number-plus:hover {
-        background-color:  $main-color - 100%;;
+    .number-plus:hover {
+        background-color: $main-color - 100%;
     }
+
+
 }
 
 
