--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: 'Source Code Pro', monospace;
   background-color: #313131;
-  color: white;
+  color: #ffffff;
   width: 100vw;
   -webkit-animation: start .5s ease;
           animation: start .5s ease;
