--- a/css/style.scss
+++ b/css/style.scss
@@ -192,7 +192,7 @@ input[type='radio'] {
 
 .number {
   &-minus {
-    // border-radius: 50% 0 0 50%;
+    border-radius: 50% 0 0 50%;
     position: absolute;
 
     left: rem(-36);
@@ -207,7 +207,7 @@ input[type='radio'] {
     }
   }
   &-plus {
-    // border-radius: 0 50% 50% 0;
+    border-radius: 0 50% 50% 0;
     position: absolute;
 
     right: rem(-36);
