--- a/css/style.scss
+++ b/css/style.scss
@@ -91,7 +91,7 @@ input[type='number'] {
   font-family: 'Source Code Pro', monospace;
   outline: none;
   padding: 0px rem(12);
-  // border-radius: rem(42);
+  border-radius: 0;
   height: rem(42);
   // border: 1px solid $main-color;
 }
