--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ input[type='number'] {
   font-family: 'Source Code Pro', monospace;
   outline: none;
   padding: 0px 0.75rem;
+  border-radius: 0;
   height: 2.625rem;
 }
 
